fix mobile z-index

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -593,7 +593,7 @@ header .entry-meta {
 
 .gsc-control-cse {
 	position: absolute;
-	z-index: 1000;
+	z-index: 100;
 	right: 0;
 	width: 300px !important;
 	border-radius: 4px;
